# fridge2fork

./: .gitignore
server/: .coverage  .dockerignore  .dockerignore.tmp  .env.example  .gitignore  CRAWLING_COMMANDS.md  DOCKER.md  Dockerfile  README.md  WORK.md  alembic.ini  all_recipe_urls.json  crawled_recipe_urls.json  crawled_urls.json  crawling_progress.json  entrypoint.sh  gunicorn.conf.py  main.py  prejob_sample.ipynb  pyproject.toml  pytest.ini  recipe_data.json  requirements.common.txt  requirements.dev.txt  requirements.prod.txt  test.db
server/.claude/: CLAUDE.md
server/alembic/: env.py
server/claudedocs/: algorithm_explanation.md  category_list_api.md  feedback_feature.md  recipe_recommendations_api.md  recommendation_settings.md  system_health_api.md  system_version_api.md  troubleshoot_admin_settings.md
server/data/: failed_recipe_urls.json
server/datas/: TB_RECIPE_SEARCH_241226_SAMPLE.csv  cleaned_recipes_10.csv  cleaned_recipes_100.csv  cleaned_recipes_20.csv
server/doc/: API_PLAN.md  API_TEST.md
server/docs/: ADMIN_IMPLEMENTATION_PLAN.md  ADMOB_AND_VERSION_MANAGEMENT.md  API_ENDPOINTS.md  API_SPECIFICATION.md  CRAWLING.md  DATABASE_SCHEMA.md  IMPLEMENTATION_PLAN.md  INGREDIENT_NORMALIZATION_STRATEGY.md  MASSIVE_CRAWLING_GUIDE.md  MIGRATION_STRATEGY.md  PAGINATION_PROBLEM_ANALYSIS.md  POSTGRESQL_SESSION_GUIDE.md  REDIS_RECOMMENDATION.md  SQLADMIN_SETUP.md  ULTIMATE_CRAWLING_COMMANDS.md
server/k8s/: deployment.dev.yaml  deployment.prod.yaml
server/migrations/: env.py
server/scripts/: cleanup_sessions.py  final_1000_crawler.py  migrate.py  (+20 more)
(+468 files in other folders)
