[project]
name = "server"
version = "0.1.0"
description = "Fridge2Fork Recipe Recommendation API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "pandas>=2.3.3",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "alembic==1.12.1",
    "sqlalchemy==2.0.23",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "redis==5.0.1",
    "httpx==0.25.2",
    "email-validator>=2.1.0",
    "aiosqlite>=0.19.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.21.0",
    "sqladmin>=0.21.0",
]
